--- a/20200723_shop_cart/style/main.css
+++ b/20200723_shop_cart/style/main.css
@@ -1,3 +1,15 @@
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.product_list{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1200px;
+}
+
 .product_list{
     display: flex;
     flex-wrap: wrap;
