feat: add base category

--- a/20200723_shop_cart/style/main.css
+++ b/20200723_shop_cart/style/main.css
@@ -82,3 +82,18 @@ body{
 .close{
     display: none;
 }
+
+.categories{
+    font-size: 18pt;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.categories .categories_name{
+    padding: 15px 5px;
+}
+
+.categories .categories_name:hover{
+    background-color: darkcyan;
+    cursor: pointer;
+    color: wheat;
+}
